small changes in api docs
