# api/api.yaml
@@ -58,15 +58,15 @@ components:
       type: object
     LoginModel:
       properties:
+        login:
+          maxLength: 64
+          type: string
         password:
           maxLength: 128
           type: string
-        username:
-          maxLength: 64
-          type: string
       required:
+      - login
       - password
-      - username
       type: object
     PaginatedMetaDataModel:
       properties:
@@ -386,8 +386,8 @@ components:
       - type
       type: object
 info:
-  title: Kfr python junior test
-  version: 1.0.0
+  title: Kefir Python Junior Test
+  version: 0.1.0
 openapi: 3.0.3
 paths:
   /users/current:
@@ -408,13 +408,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/CurrentUserResponseModel'
           description: OK
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseModel'
+          description: Bad Request
         '401':
           description: Unauthorized
       summary: "\u041F\u043E\u043B\u0443\u0447\u0435\u043D\u0438\u0435 \u0434\u0430\
         \u043D\u043D\u044B\u0445 \u043E \u0442\u0435\u043A\u0443\u0449\u0435\u043C\
         \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0435"
       tags:
-      - users
+      - user
   /users:
     get:
       description: "\u0417\u0434\u0435\u0441\u044C \u043D\u0430\u0445\u043E\u0434\u0438\
@@ -468,7 +474,7 @@ paths:
         \u0431\u043E \u0432\u0441\u0435\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\
         \u0432\u0430\u0442\u0435\u043B\u044F\u0445"
       tags:
-      - users
+      - user
   /users/profile:
     patch:
       description: "\u0417\u0434\u0435\u0441\u044C \u043F\u043E\u043B\u044C\u0437\u043E\
@@ -489,6 +495,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdateUserResponseModel'
           description: OK
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseModel'
+          description: Bad Request
         '401':
           description: Unauthorized
         '422':
@@ -501,7 +513,7 @@ paths:
         \u043D\u043D\u044B\u0445 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\
         \u0435\u043B\u044F"
       tags:
-      - users
+      - user
   /login:
     post:
       description: "\u041F\u043E\u0441\u043B\u0435 \u0443\u0441\u043F\u0435\u0448\u043D\
@@ -560,8 +572,8 @@ paths:
                 description: Set both access_token_cookie and refresh_token_cookie
                 example: access_token_cookie=eyJ0eXAi...; Path=/; HttpOnly
                 type: string
-        '401':
-          description: Password changed since token was issues
+        '400':
+          description: Token expired
       summary: "\u041E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u0435 Cookie"
       tags:
       - auth
@@ -616,8 +628,6 @@ paths:
                 example: access_token_cookie=deleted; path=/; expires=Thu, 01 Jan
                   1970 00:00:00 GMT
                 type: string
-        '401':
-          description: Password changed since token was issues
       summary: "\u0412\u044B\u0445\u043E\u0434 \u0438\u0437 \u0441\u0438\u0441\u0442\
         \u0435\u043C\u044B"
       tags:
@@ -663,6 +673,12 @@ paths:
                 title: Response 401 Users Users Get
                 type: string
           description: Unauthorized
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponseModel'
+          description: Forbidden
         '422':
           content:
             application/json:
@@ -713,8 +729,7 @@ paths:
           content:
             application/json:
               schema:
-                title: Response 403 Private Create Users Private Users Post
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Forbidden
         '422':
           content:
@@ -765,15 +780,13 @@ paths:
           content:
             application/json:
               schema:
-                title: Response 403 Private Create Users Private Users Post
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Forbidden
         '404':
           content:
             application/json:
               schema:
-                title: Response 404 Private Get User Private Users  Pk  Get
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Not Found
         '422':
           content:
@@ -811,15 +824,13 @@ paths:
           content:
             application/json:
               schema:
-                title: Response 403 Private Delete User Private Users  Pk  Delete
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Forbidden
         '404':
           content:
             application/json:
               schema:
-                title: Response 404 Private Get User Private Users  Pk  Get
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Not Found
         '422':
           content:
@@ -874,15 +885,13 @@ paths:
           content:
             application/json:
               schema:
-                title: Response 403 Private Patch User Private Users  Pk  Patch
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Forbidden
         '404':
           content:
             application/json:
               schema:
-                title: Response 404 Private Patch User Private Users  Pk  Patch
-                type: string
+                $ref: '#/components/schemas/ErrorResponseModel'
           description: Not Found
         '422':
           content:
@@ -901,7 +910,7 @@ paths:
 tags:
 - description: User's login and register
   name: auth
-- description: Admins part
+- description: Admin's part
   name: private
 - description: User's part
-  name: users
+  name: user
